review of some chapters; mainly for presentation)

--- a/00_jupyter.ipynb
+++ b/00_jupyter.ipynb
@@ -11,10 +11,30 @@
    "source": [
     "# Jupyter notebook and Markdown\n",
     "\n",
-    "A notebook is an electronic  document used for **literate programming**. In literate programming, text (usually in the form of **Markdown**), code, and code output (both textual and graphical) are combined in a single document which can often also be exported to html, pdf or Word format.\n",
-    "\n",
-    "Jupyter (IPython) is a browser-based notebook with support for highlighted code, code execution and result embedding, text with markup (Markdown, MathJax Equations or HTML), inline plots and other media.\n",
-    "\n",
+    "A notebook is an electronic  document used for **literate programming**. In literate programming, text (usually in the form of **Markdown**), code, and code output (both textual and graphical) are combined in a single document which can often also be exported to html, pdf or Word format.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "042787ad",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Jupyter (IPython) is a browser-based notebook with support for highlighted code, code execution and result embedding, text with markup (Markdown, MathJax Equations or HTML), inline plots and other media."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be0a327e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "Notebooks such as Jupyter (or RMarkdown with R programming) make it possible to combine your analyses, the analysis outputs in both textual and graphic form, and thoughts and comments in one place. This makes your work both readable and reproducible, two very important aspects of data science."
    ]
   },
@@ -29,8 +49,18 @@
    "source": [
     "## Markdown\n",
     "\n",
-    "Markdown is a lightweight markup language that you can use to add formatting elements to plain text documents. Created by John Gruber in 2004, Markdown is now one of the world’s most popular markup languages with many non-standard extensions and dialects.  \n",
-    "\n",
+    "Markdown is a lightweight markup language that you can use to add formatting elements to plain text documents. Created by John Gruber in 2004, Markdown is now one of the world’s most popular markup languages with many non-standard extensions and dialects.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb5f0674",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "Using Markdown is different than using a WYSIWYG (What You See Is What You Get) editor such as Microsoft Word. In such an application you click buttons to format words and phrases, and the changes are visible immediately.  \n",
     "Markdown isn’t like that. When you create a Markdown-formatted file, you add Markdown syntax to the text to indicate which words and phrases should look different.  \n",
     "\n",
@@ -53,12 +83,35 @@
     "##### level five header\n",
     "```\n",
     "\n",
-    "Which will be _rendered_ in any application \"speaking\" markdown into something like this:\n",
+    "Which will be _rendered_ in any application \"speaking\" markdown into something like this:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50bc1070",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "\n",
     "### level three header\n",
-    "##### level five header\n",
-    "\n",
-    "Note that the numbering you will see in a the Jupyterbook form of this document is added by Jupyterbook and will normally be absent after rendering."
+    "##### level five header\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "66b721bb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{note}\n",
+    "Note that the numbering you will see in a the Jupyterbook form of this document is added by Jupyterbook and will normally be absent after rendering.\n",
+    ":::"
    ]
   },
   {
@@ -76,14 +129,25 @@
     "```markdown\n",
     "If you want **bold text** you surround that part with double asterisks.  \n",
     "If you want _some italic words_ you surround them with single underscores.  \n",
-    "You can combine this into ***bold and italic*** of course!  \n",
+    "You can combine this into **_bold and italic_** of course!  \n",
     "This is some Python code: `print(\"hello, world\")`\n",
     "```\n",
-    "And thes will render as shown below:  \n",
-    "\n",
+    "And these will render as shown below:  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9b5c7c4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "If you want **bold text** you surround that part with double asterisks.  \n",
     "If you want _some italic words_ you surround them with single underscores.  \n",
-    "You can combine this into ***bold and italic*** of course!\n",
+    "You can combine this into ***bold and italic*** of course!   \n",
     "This is some Python code: `print(\"hello, world\")`\n"
    ]
   },
@@ -149,7 +213,18 @@
     "```markdown\n",
     "[click here](http://www.example.com)`\n",
     "```\n",
-    "renders into this link: [click here](http://www.example.com) \n",
+    "renders into this link: [click here](http://www.example.com) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eb3be00",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
     "To add an image you use this structure:  \n",
     "`![image alt text](image/location/on/disk)`,  \n",
@@ -237,9 +312,30 @@
     "$$s = \\sqrt{\\frac{1}{N-1} \\sum_{i=1}^N (x_i - \\overline{x})^2}$$\n",
     "```\n",
     "\n",
-    "renders as\n",
-    "$$s = \\sqrt{\\frac{1}{N-1} \\sum_{i=1}^N (x_i - \\overline{x})^2}$$\n",
-    "\n",
+    "renders as\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a486b878",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "$$s = \\sqrt{\\frac{1}{N-1} \\sum_{i=1}^N (x_i - \\overline{x})^2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "152cf3ce",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "\n",
     "Use single dollar sign delimiters `$<equation>$` for inline equations and double dollar sign delimiters `$$<equation>$$` for paragraph equations.  \n",
     "See [this pdf](http://tug.ctan.org/info/undergradmath/undergradmath.pdf) or [this website](https://tilburgsciencehub.com/building-blocks/collaborate-and-share-your-work/write-your-paper/amsmath-latex-cheatsheet/) for a nice cheat sheets."
@@ -256,10 +352,35 @@
    "source": [
     "## Jupyter \n",
     "\n",
-    "A notebook is an ordered series of cells that are either *markdown*, *code* or *raw text*. You can move these cells up or down, and evaluate/execute them individually or all in one. You toggle between two \"states\": *edit mode* or *command mode*. When in edit mode you can edit cells but not delete, change, create or move them. WFor that you need to be in command mode.\n",
-    "When in edit mode, use `esc` key to go to command mode. When in command mode, use `enter` key to edit the current selected cell.\n",
+    "A notebook is an ordered series of cells that are either *markdown*, *code* or *raw text*.  \n",
+    "You can move these cells up or down, and evaluate/execute them individually or all in one.  \n",
     "\n",
-    "\n",
+    "You toggle between two \"states\": *edit mode* or *command mode*.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ae6ceeb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "When in edit mode you can edit cells but not delete, change, create or move them. For that you need to be in command mode.  \n",
+    "When in edit mode, use `esc` key to go to command mode.  \n",
+    "When in command mode, use `enter` key to edit the current selected cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3cf3e5a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Keyboard shortcuts in edit mode\n",
     "\n",
     "**`Enter`\tto enter \"Edit mode\"**\n",
@@ -304,7 +425,11 @@
   {
    "cell_type": "markdown",
    "id": "f18044b8",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "### IPython/Jupyter magic commands\n",
     "This is a special type of code in code cells; they are not Python code but executed by the Jupyter engine.\n",
