--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -23,7 +23,17 @@
     }
    },
    "source": [
-    "## Calculating the surface area of triangles\n",
+    "## Calculating the surface area of triangles\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "In this chapter we will walk through an entire coding case to create a standalone program that can be executed in a terminal environment (MacOS & Linux: terminal, Windows: Command Prompt).  \n",
     "The case is a trivial example: calculating the surface area of triangles."
    ]
@@ -38,8 +48,8 @@
    "source": [
     "### Variables\n",
     "\n",
-    "Suppose I want to calculate the surface of three different equilateral triangles, with sides 3, 4 and 2.21 respectively.\n",
-    "First I define a **variable** representing the length of all equal sides and assign an initial value to it. To inspect the value of a variable at any given time you can `print()` it."
+    "Suppose I want to calculate the surface of three different equilateral triangles, with sides 3, 4 and 2.21 respectively.  \n",
+    "First I define a **variable** representing the length of the side and assign an initial value to it. To inspect the value of a variable at any given time you can `print()` it."
    ]
   },
   {
@@ -72,8 +82,35 @@
     }
    },
    "source": [
+    "### Functions  \n",
+    "\n",
+    "The phrase `print` is the name of a **function**. This particular function can be used to display text on the console (or as output from a code cell). Arguments to a function are passed between a pair of parentheses `()`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "\n",
+    "A function is a re-usable piece of code, accessible by its name. It can receive input data (arguments) specified by its parameters, passed into the function between a pair of parentheses `()`.  \n",
+    "Even if there are no arguments to be passed, the parentheses are mandatory.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "### Comments\n",
-    "Note the use of `#text` to add human-readable comments to the code. In all Python code (notebook code cell, script and repl console), everything on a line after `#` will be ignored when evaluating the cell. When using an editor with syntax highlighting this will be shown clearly with a grey or other light color, as in the cell above."
+    "Note the use of `#text` to add human-readable comments to the code. In all Python code (notebook code cell, script and repl console), everything on a line after `#` will be ignored when evaluating the cell.  \n",
+    "When using an editor with syntax highlighting this will be shown clearly with a grey or other light color, as in the cell above."
    ]
   },
   {
@@ -86,7 +123,7 @@
    "source": [
     "```{admonition} Code comments\n",
     ":class: note\n",
-    "Any text occurring on a line after a hash symbol `#` will be ignored by the python interpreter.  \n",
+    "Any text occurring on a line after a hash symbol \"#\" will be ignored by the python interpreter.  \n",
     "Text after a hash is called code comment.\n",
     "```"
    ]
@@ -98,17 +135,6 @@
      "slide_type": "skip"
     }
    },
-   "source": [
-    "### Functions\n",
-    "The phrase `print` is the name of a **function**. This particular function can be used to display text on the console (or as output from a code cell). Arguments to a function are passed between a pair of parentheses `()`. \n",
-    "\n",
-    "A function is a re-usable piece of code, accessible by its name. It can receive input data (arguments) specified by its parameters, passed into the function between a pair of parentheses `()`.  \n",
-    "Even if there are no arguments to be passed, the parentheses are mandatory.  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "```{admonition} Displaying results of a cell\n",
     ":class: note\n",
@@ -127,12 +153,20 @@
     "### Operators\n",
     "Next, I use the `side` variable to calculate the surface of a 3 - 3 - 3 triangle:\n",
     "\n",
-    "The formula to calculate the surface area of a triangle is \n",
-    "$$\\frac{1}{2} * width * height$$\n",
-    "but since it is equilateral we can simply use\n",
-    "$$\\frac{1}{2} * side^2$$\n",
-    "\n",
-    "To calculate this, you will need to combine data in a mathematical ways such as addition, subtraction, multiplication, division etc. We call the symbols that signal these mathematical operations _operators_.  \n",
+    "The formula to calculate the surface area of an equilateral triangle is \n",
+    "$$\\frac{1}{2} * side^2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "To calculate this in Python code, you will need to combine data using things such as addition, subtraction, multiplication, division etc.  \n",
+    "We call the symbols that signal these mathematical operations _operators_.  \n",
     "Below you see two of these: `*` and `**`."
    ]
   },
@@ -210,7 +244,8 @@
     "f'The area of an equilateral triangle with side {side} is {area}'\n",
     "```\n",
     "\n",
-    "The structure `f'Some text with {variable}'` is a _format string_. A format string is character sequence in which we can insert values from python variables or expressions at the location of the curly braces to produce this:  \n",
+    "The structure `f'Some text with {variable}'` is a _format string_.  \n",
+    "A format string is character sequence in which we can insert values from python variables or expressions at the location of the curly braces to produce this:  \n",
     "  \n",
     "`'The area of an equilateral triangle with side 3 is 4.5'`\n"
    ]
@@ -244,12 +279,13 @@
    "source": [
     "### Custom functions\n",
     "\n",
-    "Now I want to do the same calculation and reporting for triangles with other side lengths. I could just copy-and-paste all code, as in the cell below:"
+    "I want to do the same calculations and result reporting for triangles with other side lengths.  \n",
+    "I could just copy-and-paste all code, as in the cell below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -364,12 +400,12 @@
    },
    "source": [
     "### Flow control: a \"loop\"\n",
-    "But wait! There is still copied code. We now take a leap forward in Python programming concepts. We use the `for` loop to _iterate_ over a collection of values and a `list`, which is an ordered collection of values maintained as a single unit. Here is a solution that does not use copied code at all."
+    "But wait! There is still copied code. We now take a leap forward in Python programming concepts. We use the `for` loop to _iterate_ over a collection of values contained within a `list`, which is an ordered collection of values maintained as a single unit. Here is a solution that does not use copied code at all."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -389,7 +425,7 @@
    "source": [
     "sides = [3, 4, 2.21]        # a list of values\n",
     "for n in sides:             # iterate using for\n",
-    "    print_triangle_area(n)  # the iterated block"
+    "    print_triangle_area(n)  # the iterated 'block', as indented line(s)"
    ]
   },
   {
@@ -414,7 +450,7 @@
     "## Bring it together in a program\n",
     "\n",
     "By now you may be thinking that this does not look like programming at all. Where is the program?\n",
-    "Actually, there is there is programming code but no standalone program here.\n",
+    "Actually, there is programming code but no standalone program (executable) here.\n",
     "\n",
     "A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database)."
    ]
@@ -427,7 +463,7 @@
     }
    },
    "source": [
-    "Given the triangle example above, a standalone terminal program for calculating and reporting triangle surface area would look like the cell below.  "
+    "Given the triangle example above, a standalone terminal program for calculating and reporting triangle surface area would look like the code listing below.  "
    ]
   },
   {
@@ -439,19 +475,16 @@
    },
    "source": [
     "```python\n",
-    "'''This program calculates the surface of equilateral triangles with sides given on the command line.'''\n",
-    "\n",
-    "import sys                            # non-core language functionality needs to be imported\n",
+    "import sys # non-core language functionality needs to be imported\n",
     "\n",
     "def print_triangle_area(side):\n",
-    "    '''Calculates the area of a triangle with given side.'''\n",
     "    area =  0.5 * side**2\n",
     "    print(f'The area of an equilateral triangle with side {side} is {round(area, 2)}')\n",
     "\n",
-    "for arg in sys.argv[1:]:              # loop the command-line arguments\n",
-    "    side = float(arg)                 # convert to number (command line args are always character data)\n",
+    "for arg in sys.argv[1:]:        # loop the command-line arguments\n",
+    "    side = float(arg)           # convert to number \n",
     "    print_triangle_area(side)\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -479,11 +512,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "There are some elements that you may not understand yet. For those who cannot proceed without a little premature explanation:  \n",
+    "There are some elements that you probably do not understand yet. For those who cannot proceed without a little premature explanation:  \n",
     "\n",
     "- `import sys` says \"load the functionality located in module `sys` and make it available here\". The functionality that is available by default in any Python program is rather limited to keep it lean. Any additional functionality must be loaded from modules using an **import statement**.\n",
     "- `sys.argv` is the list of arguments entered on the command line, in this case `[\"triangle_surface.py\", \"3\", \"4\", \"2.21\"]`. We'll get to lists in the next chapter. \n",
@@ -492,7 +525,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Key Concepts"
    ]
@@ -538,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
