--- a/03_flow_control.ipynb
+++ b/03_flow_control.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "# Control the flow of things\n",
     "\n",
-    "Besides data, flow control is at the heart of programming. What is the use of a list if you can't iterate it? How could you ever take alterantive courses of action based on some variable value without the use of if/else blocks?\n",
+    "Besides data, flow control is at the heart of programming. What is the use of a list if you can't iterate it? How could you ever take alternative courses of action based on some variable value without the use of if/else blocks?\n",
     "\n",
     "This chapter deals with all aspects concerning control of program flow or in short flow control."
    ]
@@ -44,12 +44,13 @@
     "## Code blocks\n",
     "All flow control elements make use of code blocks: one or multiple statements (lines) that belong together and are executed together.  \n",
     "\n",
-    "A code block is defined by **indentation** (4 spaces usually), and in flow control it always follows an iteration or decision statement ending with a colon:\n",
+    "A code block is defined by **indentation** (usually 4 spaces).  \n",
+    "In flow control it always follows an iteration or decision statement ending with a **colon**.\n",
     "\n",
     "```text\n",
     "<some flow control element>:\n",
-    "    block code \n",
-    "    block code\n",
+    "    statement belonging to block \n",
+    "    statement belonging to block \n",
     "    ...\n",
     "\n",
     "code not belonging to the flow control element\n",
@@ -59,7 +60,11 @@
   {
    "cell_type": "markdown",
    "id": "ef601029",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "```{admonition} Indent consistently\n",
     ":class: important\n",
@@ -84,11 +89,7 @@
     "```python\n",
     "for element in iterable:\n",
     "    #code block with the current value of element\n",
-    "```\n",
-    "\n",
-    "Let's walk through some examples to demonstrate iteration and its details. Note that some examples can be implemented much more efficiently than shown here!\n",
-    "\n",
-    "The alternative to `for`, `while` is used when you have no collection but want to repeat for another reason. This will be demonstrated at the end of this section.\n"
+    "```"
    ]
   },
   {
@@ -96,10 +97,14 @@
    "id": "6c07368e",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
+    "Let's walk through some examples to demonstrate iteration and its details. Note that some examples can be implemented much more efficiently than shown here!\n",
+    "\n",
+    "The alternative to `for`, `while` is used when you have no collection but want to repeat for another reason. This will be demonstrated at the end of this section.  \n",
+    "\n",
     "Here are some fruits again:"
    ]
   },
@@ -109,7 +114,7 @@
    "id": "34656a15",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -230,14 +235,14 @@
     "\n",
     "When you call a function that returns a tuple, such as this one\n",
     "\n",
-    "```python\n",
+    "```python  \n",
     "def get_tup():\n",
     "    return ('foo', 'bar')\n",
     "```\n",
     "\n",
     "you can catch the tuple as a whole\n",
     "\n",
-    "```python\n",
+    "```python  \n",
     "r = get_tup()\n",
     "```\n",
     "\n",
@@ -249,7 +254,7 @@
     "(one, two) = get_tup()\n",
     "```\n",
     "\n",
-    ":::\n"
+    ":::"
    ]
   },
   {
@@ -257,11 +262,11 @@
    "id": "09da0a29",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "### Exiting loops and other blocks\n",
+    "### Exiting loops and other blocks   \n",
     "\n",
     "If you are not interested in all items, but want to exit when you found a specific item? Use the **break** keyword:"
    ]
@@ -301,7 +306,7 @@
     }
    },
    "source": [
-    "As you can see `break` skips all subsequent iterations. Similarly, if you want to skip only a single iteration you can use `continue`:"
+    "As you can see, `break` skips all subsequent iterations. Similarly, if you want to skip only a single iteration you can use `continue`:"
    ]
   },
   {
@@ -336,7 +341,7 @@
    "id": "4e1176e1",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -358,7 +363,7 @@
    "id": "b78bcc51",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "outputs": [
@@ -481,7 +486,7 @@
     "    pass\n",
     "elif condition:  # Optional, but many allowed\n",
     "    pass\n",
-    "else:            # Optional, executed only when all of the above evaluated to False; only one allowed\n",
+    "else:            # Optional, when all conditions False, only one allowed\n",
     "    pass\n",
     "```\n",
     "\n",
@@ -648,7 +653,11 @@
   {
    "cell_type": "markdown",
    "id": "0bae0c2b",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Key concepts"
    ]
@@ -656,7 +665,11 @@
   {
    "cell_type": "markdown",
    "id": "eb59e193",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     ":::{important} \n",
     "\n",
@@ -684,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
