--- a/04_functions.ipynb
+++ b/04_functions.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -271,9 +271,7 @@
      "text": [
       "50.0\n",
       "100000.0\n",
-      "50.0\n",
-      "Calculates the distance in meters given a speed in km/h and\n",
-      "    elapsed time in seconds\n"
+      "50.0\n"
      ]
     }
    ],
@@ -312,7 +310,10 @@
     "```{admonition} Parameters versus Arguments\n",
     ":class: note\n",
     "\n",
-    "A parameter is a variable in a function definition. It is a placeholder and hence does not have a concrete value. An argument is a value passed during function invocation. In a way, arguments fill in the place the parameters have held for them.\n",
+    "A parameter is a variable in a function definition. It is a placeholder \n",
+    "and hence does not have a concrete value. An argument is a value passed \n",
+    "during function invocation.  \n",
+    "In a way, arguments fill in the place the parameters have held for them.\n",
     "```"
    ]
   },
@@ -333,7 +334,17 @@
     "distance_meters()\n",
     "distance_meters(1)\n",
     "distance_meters(1, 2, 3)\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "\n",
     "You will get an error message like this: `TypeError: distance_meters() takes 2 positional arguments but 3 were given\n",
     "`.\n",
@@ -351,9 +362,7 @@
    "source": [
     "### Default values give more flexibility\n",
     "\n",
-    "If you can think of a sensible default value for your parameters you can provide these. That way you can make the invocation and execution of your functions much more flexible. \n",
-    "\n",
-    "There is an important aspect to think about: only provide default values if they make sense, and of course you can provide only one default value so choose the most appropriate ones if you have multiple candidates."
+    "If you can think of a sensible default value for your parameters you can provide these. That way you can make the invocation and execution of your functions much more flexible. "
    ]
   },
   {
@@ -364,12 +373,14 @@
     }
    },
    "source": [
-    "Here is the distance calculating function again, in a slightly modified version. The `time_sec` parameter now has a default value. This means that if this argument is omitted, you do not get an error but instead the function will execute with the default. If you _do_ provide a value for it, this will override the default value. "
+    "There is an important aspect to think about: only provide default values if they make sense, and of course you can provide only one default value so choose the most appropriate ones if you have multiple candidates.  \n",
+    "\n",
+    "Here is the distance calculating function again, in a slightly modified version. The `time_sec` parameter now has a default value. This means that if this argument is omitted, you do not get an error but instead the function will execute with the default. If you _do_ provide a value for it, this will override the default value.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -421,19 +432,29 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Communicate intent and details via docstring   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "skip"
     }
    },
    "source": [
-    "### Communicate intent and details via docstring\n",
     "\n",
     "So far you have seen only simple comments using a single hash `#`. These comments generally serve to communicate something about the code to yourself or maybe to your colleague programmer.  \n",
-    "However, if you're successfull there will also be others using your code in the context of an imported library. If you wish to provide them with info on how your functions should be used, you should take some time to write a **pydoc docstring**. A triple-quoted string at the top of your function body will make it available though the `__doc__` attribute and via the `help()` function.\n"
+    "However, if you're successfull there will also be others using your code in the context of an imported library. If you wish to provide them with info on how your functions should be used, you should take some time to write a **pydoc docstring**. A triple-quoted string at the top of your function body will make it available though the `__doc__` attribute and via the `help()` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -464,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -566,7 +587,10 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": [
+     "raises-exception"
+    ]
    },
    "outputs": [
     {
@@ -576,8 +600,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mc\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m \u001b[43mdo_it\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mc\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36mdo_it\u001b[0;34m(b)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdo_it\u001b[39m(b):\n\u001b[1;32m      4\u001b[0m     c \u001b[38;5;241m=\u001b[39m b\n\u001b[0;32m----> 5\u001b[0m     a \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[6], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mc\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m \u001b[43mdo_it\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mc\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[6], line 5\u001b[0m, in \u001b[0;36mdo_it\u001b[0;34m(b)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdo_it\u001b[39m(b):\n\u001b[1;32m      4\u001b[0m     c \u001b[38;5;241m=\u001b[39m b\n\u001b[0;32m----> 5\u001b[0m     a \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb has value \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
       "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'a' referenced before assignment"
      ]
     }
@@ -610,13 +634,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a has value 13\n",
+      "b has value 5\n",
+      "c has value 5\n",
+      "a has value 13\n"
+     ]
+    }
+   ],
    "source": [
     "a = 12\n",
     "\n",
@@ -645,13 +680,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a has value 13\n",
+      "b has value 5\n",
+      "c has value 5\n",
+      "a has value 13\n",
+      "c has value 6\n"
+     ]
+    }
+   ],
    "source": [
     "a = 12\n",
     "\n",
@@ -686,7 +733,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -712,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -723,8 +770,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "At 06/04/2023 16:08:13 you messaged foo\n",
-      "At 06/04/2023 16:08:13 you messaged bar\n",
+      "At 05/09/2023 11:05:13 you messaged foo\n",
+      "At 05/09/2023 11:05:13 you messaged bar\n",
       "You messaged bye\n",
       "You messaged auf wiedersehen\n"
      ]
@@ -758,7 +805,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "```{note}\n",
     "Working with dates and times is a really interesting and surprisingly complex topic (think Time Zones...). A very minimal tutorial for working with these can be founde on this [website](https://www.w3schools.com/python/python_datetime.asp)\n",
@@ -883,7 +934,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "### Type hints\n",
     "\n",
@@ -935,7 +990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "rise": {
    "height": "90%",
