--- a/05_reading_writing_files.ipynb
+++ b/05_reading_writing_files.ipynb
@@ -60,12 +60,12 @@
     }
    },
    "source": [
-    "To read this data in the most convenient way possible, we can read its contents in one operation:"
+    "To read this data in the simplest way possible, we can read its contents in one operation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "9ee56d94",
    "metadata": {
     "slideshow": {
@@ -83,14 +83,16 @@
       "4,f,182\n",
       "5,f,172\n",
       "6,m,189\n",
-      "\n"
+      "\n",
+      "<class 'str'>\n"
      ]
     }
    ],
    "source": [
     "file = open(\"data/lengths.csv\", \"r\")\n",
     "data = file.read()\n",
-    "print(data)\n"
+    "print(data)\n",
+    "print(type(data))"
    ]
   },
   {
@@ -98,7 +100,7 @@
    "id": "77249a6b",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -122,7 +124,7 @@
    "source": [
     "## Iterating contents\n",
     "\n",
-    "Usually you want to iterate over file contents line by line without the need to store it all in memry as-is. This is done by applying the for-loop on the file stream:"
+    "Usually you want to iterate over file contents line by line without the need to store it all in memory as-is. This is done by applying the for-loop on the file stream:"
    ]
   },
   {
@@ -333,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
