--- a/06_core_library_functions.ipynb
+++ b/06_core_library_functions.ipynb
@@ -27,14 +27,25 @@
    },
    "source": [
     "## Built-in functions\n",
-    "These are the functions you have always at your disposal, without `import` statement. The list is not very long because this keeps the core of Python lean.\n",
-    "The complete list can be found in the [doc page on built-ins](https://docs.python.org/3/library/functions.html)\n",
+    "The builtins are the functions you have always at your disposal, without `import` statement. The list is not very long because this keeps the core of Python lean.\n",
+    "The complete list can be found in the [doc page on built-ins](https://docs.python.org/3/library/functions.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e23bd9c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
     "The core contains \"constructor functions\" for all built-in datatypes - which we have already seen: `bool()`, `dict()`, `float()`, `int()`, `list()`, `set()`, `str()`, `tuple()` (some were not discussed and will neither be listed here)\n",
     "\n",
     "Also already discussed or demonstrated were `help()`, `input()`, `len()`, `max()`, `min()`, `range()`, `type()`\n",
     "\n",
-    "There are some functions related to object-oriented programming (OOP): `getattr()`, `setattr()`, `hasattr()`, `isinstance()`, `issubclass()`, `iter()`, `next()`, `staticmethod()` that will be deiscussed in the chapter on OOP.\n"
+    "There are some functions related to object-oriented programming (OOP): `getattr()`, `setattr()`, `hasattr()`, `isinstance()`, `issubclass()`, `iter()`, `next()`, `staticmethod()` that will be deiscussed in the chapter on OOP."
    ]
   },
   {
@@ -234,7 +245,7 @@
    "id": "4e6527ce",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -448,7 +459,7 @@
     }
    },
    "source": [
-    "#### Lambdas "
+    "### Lambdas (optional)"
    ]
   },
   {
@@ -575,7 +586,8 @@
    "source": [
     "#### Multi-key sorting\n",
     "\n",
-    "Whenever you need sorting based on multiple properties - e.g. sorting first on family name and then on given name - you can employ the trick of tuple sorting:"
+    "Whenever you need sorting based on multiple properties - e.g. sorting first on family name and then on given name - you can employ the trick of tuple sorting.  \n",
+    "If your 'key' function returns a tuple, then standard tuple sorting will be performed: on each consecutive element of the tuple."
    ]
   },
   {
@@ -625,9 +637,19 @@
    "source": [
     "## Using `filter()` and `map()` (optional)\n",
     "\n",
-    "These functions are used on collections, to filter the elements in them on some property, or to change each element or to swap them for something else. They represent important players in the filter-map-reduce functional programming paradigm.  \n",
-    "\n",
-    "Fot example, imagine a cupcake production line. There will be a machine taking in a plate of cupcakes and applying frosting to all of them: it **maps** a cupcake to a frosted cupcake. There will also be a machine taking in a plate of cupcakes, removing the badly formed ones: it **filters** the cupcakes, only letting the good ones pass."
+    "These functions are used on collections, to filter the elements in them on some property, or to change each element or to swap them for something else. They represent important players in the filter-map-reduce functional programming paradigm.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1758741a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "For example, imagine a cupcake production line. There will be a machine taking in a plate of cupcakes and applying frosting to all of them: it **maps** a cupcake to a frosted cupcake. There will also be a machine taking in a plate of cupcakes, removing the badly formed ones: it **filters** the cupcakes, only letting the good ones pass."
    ]
   },
   {
@@ -635,13 +657,23 @@
    "id": "52dd94a5",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
     "- **map()** applies a function (e.g. frosting) to all members of a collection, and returns the resulting collection, which is of course the same size as the original\n",
-    "- **filter()** applies a function (e.g. scanning bad cupcakes) to all members of a collection, only keeping those members that pass the function (return True)\n",
-    "\n",
+    "- **filter()** applies a function (e.g. scanning bad cupcakes) to all members of a collection, only keeping those members that pass the function (return True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9373be82",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "![Map vs Filter](pics/map_filter.png)\n",
     "Here follows an example of a map/filter chain. Note that both map and filter produce iterator objects that you usually need to embed in a collection constructor."
    ]
@@ -693,7 +725,7 @@
     }
    },
    "source": [
-    "Note that working with these functions is superceded by the use of comprehensions. These are outlined in the next chapter."
+    "Note that working with these functions is largely superceded by the use of comprehensions, which are outlined in the next chapter. I included these functions here for completeness' sake, and because not everybody likes comprehensions."
    ]
   },
   {
@@ -915,7 +947,7 @@
    "id": "7d1f0a67",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1379,7 +1411,7 @@
    "id": "14228240",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1398,7 +1430,7 @@
    "id": "500dc2d1",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
@@ -1431,7 +1463,7 @@
    "id": "73488b59",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1447,7 +1479,7 @@
    "id": "16df27fd",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1462,7 +1494,7 @@
    "id": "768d91ed",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "outputs": [
@@ -1490,7 +1522,7 @@
    "id": "53a27fc5",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1503,7 +1535,7 @@
    "id": "50bd391e",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "outputs": [
@@ -1528,12 +1560,13 @@
    "id": "81bc1cf3",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
     "#### JSON\n",
-    "Although pickle and shelve are convenient, With serious applications JSON is the way to go. There are many libraries and programming languages with integrated support for json, and stored files are human-readable as well."
+    "Although pickle and shelve are convenient, With serious applications JSON is the way to go. There are many libraries and programming languages with integrated support for json, and stored files are human-readable as well. This is outside the scope of this course.  \n",
+    "Have a look at the [json module](https://docs.python.org/3/library/json.html)\n"
    ]
   },
   {
@@ -1567,7 +1600,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -1583,7 +1615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
