--- a/10_oo_programming.ipynb
+++ b/10_oo_programming.ipynb
@@ -17,7 +17,6 @@
     "\n",
     "```python\n",
     "message = 'Howdy, Mike'\n",
-    "message2 = 'Howdy, Rose'\n",
     "message.replace('Howdy', 'Bye')\n",
     "```\n"
    ]
@@ -31,9 +30,10 @@
     }
    },
    "source": [
+    "Here, the **_string instance_** named `message` is defined and assigned.  \n",
+    "In the second line, the dot operator is applied to this instance to call its method `replace()`. Since `replace()` is _called on this particular instance_, the replacement is applied to the data stored in this particular string instance, not in any other string.  \n",
     "\n",
-    "Here, the **_string instances_** named `message` and `message2` are defined. In the third line, the dot operator is applied to the instance named `message` to call its method `replace()`. Since `replace()` is called on this particular instance, the replacement is applied to the data stored in the string instance `message`, not in the data of `message2`.\n",
-    "So, although the method is defined in the blueprint of all string objects, class `str`, when the method is called it will work on the actual data of the current instance on which the method is called.  \n",
+    "The method `replace` is defined in the blueprint of all string objects (class `str`). But when the method is called, it will only operate on the data of the instance on which the method is called.  \n",
     "\n",
     "This is the essence of object-oriented programming."
    ]
@@ -47,7 +47,10 @@
     }
    },
    "source": [
-    "## Classes and Objects"
+    "## Classes and Objects\n",
+    "\n",
+    "In this programming paradigm **classes** form the blueprint for creating **objects** (also called instances).  \n",
+    "Objects have properties (data) and functionality with access to those properties."
    ]
   },
   {
@@ -59,9 +62,6 @@
     }
    },
    "source": [
-    "In this programming paradigm **classes** form the blueprint for creating **objects** (also called instances).\n",
-    "\n",
-    "\n",
     "![Class vs Objects](pics/class_vs_objects.png)"
    ]
   },
@@ -74,12 +74,22 @@
     }
    },
    "source": [
-    "Although Python provides a wealth of classes - and you have already seen quite a few: `str`, `int`, `set`, `dict`, `list`, etc.-  there are many occasions where the need for custom classes arise.  \n",
+    "Although Python provides a wealth of classes - and you have already seen quite a few: `str`, `int`, `set`, `dict`, `list`, etc.-  there are many occasions where the need for custom classes arises.  \n",
     "\n",
     "The key point of using classes is to combine data and related functionality (methods) into a single entity.\n",
-    "Before embarking on a little (slightly) realistic example let's have a look at a minimal class and build some data and functionality into it.  \n",
-    "\n",
-    "Here is a Duck class that does absolutely nothing:"
+    "Before embarking on a little (slightly) realistic example let's have a look at a minimal class and build some data and functionality into it.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2533691a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Here is a Duck class (also called **_type_**) that is absolutely useless:"
    ]
   },
   {
@@ -102,11 +112,11 @@
    "id": "031241f8",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
-    "However, there is something you can do _with_ it: you can create a Duck _**instance**_:"
+    "However, there is something you can do with it: you can create a Duck _**instance**_:"
    ]
   },
   {
@@ -128,11 +138,12 @@
    "id": "e6d24c73",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "The duck instance named mallard is a single \"materialization\" of the Duck blueprint. Although you might think there is no functionality attached to the class, actually there is. You can `print()` it for instance."
+    "The duck instance named mallard is a single \"materialization\" of the Duck blueprint.  \n",
+    "Although you might think there is no functionality attached to the class, actually there is. Every Python class gets some base functionality out of the box, through **_inheritance_** from the base class named `object`. For instance, you can `print()` it."
    ]
   },
   {
@@ -166,7 +177,7 @@
     }
    },
    "source": [
-    "By printing it, you get to see the name of the objects' class, where it was defined, en where this instance lives in memory. When a new instance is created, it will only have a different memory address:"
+    "By printing it, you get to see the name of the objects' class, where it was defined (namespace), en where this instance lives in memory. When a new instance is created, it will have a different memory address:"
    ]
   },
   {
@@ -203,7 +214,9 @@
     }
    },
    "source": [
-    "## Class `object`, the mother of all classes"
+    "## Class `object`, the mother of all classes  \n",
+    "\n",
+    "Any object is printable because there is a base class named `object` that already specifies some behaviour that is useful for all classes you can think of: printing, testing for equality, that sort of thing"
    ]
   },
   {
@@ -211,13 +224,11 @@
    "id": "a3d26982",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "Any object is printable because there is a base class named `object` that already specifies some behaviour that is usefull for all data types you can think of: printing, testing for equality, that sort of thing\n",
-    "\n",
-    "So, although you say this:\n",
+    "So, although you code this:\n",
     "\n",
     "```python\n",
     "class Duck:\n",
@@ -250,8 +261,18 @@
     "__ge__, __getattribute__, __gt__, __hash__, __init__, __init_subclass__,\n",
     "__le__, __lt__, __module__, __ne__, __new__, __reduce__, __reduce_ex__,\n",
     "__repr__, __setattr__, __sizeof__, __str__, __subclasshook__, __weakref__'\n",
-    "```\n",
-    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59acdbb2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "These are the main **_hooks_** used by the Python language that have a default implementation (and therefore defined in class `object`). Some are properties, some are methods. For instance, the __hash__() method makes it possible to get a hash code from any object using the `hash()` method. Here are some examples."
    ]
   },
@@ -295,7 +316,7 @@
    "source": [
     "### Inheritance\n",
     "Inheritance is one of the key concepts of the object-oriented programming paradigm. Classes can be defined to be **_subclasses_** of other classes. In the example above, class Duck is said to be a subclass of class object. By being a subclass, a class inherits all data and -especially- functionality from its **_superclass_**. \n",
-    "It is a very interesting topic, extremely relevant to designing applications, but also very much out of scope for this course."
+    "It is a very interesting topic, extremely relevant to designing applications, but also out of scope for this course."
    ]
   },
   {
@@ -307,7 +328,7 @@
     }
    },
    "source": [
-    "## Adding behaviour"
+    "### Adding behaviour"
    ]
   },
   {
@@ -320,7 +341,7 @@
    },
    "source": [
     "#### Learn to swim\n",
-    "If we want to have a use for this duck we could give it something to do: swimming for instance."
+    "If we want to have a use for this duck we could give it something to do: quacking for instance."
    ]
   },
   {
@@ -343,7 +364,7 @@
    ],
    "source": [
     "class Duck:\n",
-    "    def swim(self):\n",
+    "    def quack(self):\n",
     "        print('quack quack')\n",
     "        \n",
     "eider = Duck()\n",
@@ -359,7 +380,7 @@
     }
    },
    "source": [
-    "Here is a class specifying behaviour (a method) but one single property (data / variables). Don't worry about the `self` and `__init__()` just yet - it will be addressed in the next section."
+    "The keyword `class` is used to communicate there is a class definition - an object blueprint. Don't worry about the `self` just yet - it will be addressed next. The next step is adding property."
    ]
   },
   {
@@ -385,12 +406,197 @@
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "        \n",
-    "    def swim(self):\n",
+    "    def quack(self):\n",
     "        print(f'quack quack I am a {self.name}')\n",
     "        \n",
     "\n",
     "ruddy_duck = Duck(\"Ruddy Duck\")\n",
     "ruddy_duck.swim()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "005c6f40",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### The constructor: `__init__()`\n",
+    "\n",
+    "Here is a class specifying behaviour (the `quack()` method, and a single property, the `name` data field.  \n",
+    "\n",
+    "The `__init__()` method is called the **_constructor_** method because it is used to _construct_ an object (an instance of the class). A constructor can receive arguments that are required to have a correct, functional instance of the class. In this case the Ducks' name."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1885fcb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "The `__init__()` hook makes it possible to hook into the `()` construction process by defining an argument list. As can be seen in the listing above, some hooks are already specified in class `object`. Some of these hooks you will want to re-implement for your application/your class.\n",
+    "\n",
+    "We will see a few more hooks in this chapter.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49b692e6",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### The injected `self` argument\n",
+    "\n",
+    "There is something special going on in the `__init__()` and `quack()` methods: the `self` method argument.  \n",
+    "In OO-Python, all methods invoked on an instance will receive as first argument -inserted by the Python interpreter- a reference to the **current executing object** and convention states that you name it `self`.  \n",
+    "\n",
+    "Because you have a reference to the current executing object you can attach, access and modify its data using this reference.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc847813",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{warning}\n",
+    "Omitting the `self` argument when implementing an object method is one of the more common programming mistakes.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b20e606f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Another example: points in space\n",
+    "\n",
+    "Here is the blueprint of a `Point` type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "721a3d2e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math \n",
+    "\n",
+    "class Point:\n",
+    "    def __init__(self, x_coord, y_coord, z_coord = 0):\n",
+    "        self.x = x_coord\n",
+    "        self.y = y_coord\n",
+    "        self.z = z_coord\n",
+    "    def distance(self, other):\n",
+    "        if not type(self) == type(other):\n",
+    "            raise ValueError(f'Only Point instances allowed: {type(other)}')\n",
+    "        return math.sqrt((self.x - other.x)**2 + (self.y - other.y)**2 + (self.z - other.z)**2)\n",
+    "\n",
+    "p1 = Point(2, 3)\n",
+    "p2 = Point(1, 5)\n",
+    "p1.distance(p2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b41510d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "As you can see, this use case becomes more realistic. In fact, there are many Point classes out there just like this one that are being used in production environments.  \n",
+    "The only difference they probably have lots more hooks implemented. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d77c8b5b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Object and interpreter hooks\n",
+    "The `__init__()` method is one of the many object and interpreter hooks that exist in Python. They are called \"dunder\" methods because of the \"double underscores\". When you implement these, *they let you interact with operators and built-in functions*.  \n",
+    "\n",
+    "See for instance [here](https://towardsdatascience.com/a-guide-to-pythons-dunder-methods-3b8104fce335) for more details.\n",
+    "\n",
+    "Let's add a few before proceeding with more complex example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "777bedbe",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Point'>: [x=4, y=6, z=0]\n",
+      "<class '__main__.Point'>: [x=7, y=8, z=7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    def __init__(self, x_coord, y_coord, z_coord = 0): # initialize hook\n",
+    "        self.x = x_coord\n",
+    "        self.y = y_coord\n",
+    "        self.z = z_coord\n",
+    "    def __str__(self): # print support hook\n",
+    "        return f'{type(self)}: [x={self.x}, y={self.y}, z={self.z}]'\n",
+    "    def __add__(self, other): # addition support hook\n",
+    "        return Point(self.x + other.x, self.y + other.y, self.z + other.z)\n",
+    "    def distance(self, other):\n",
+    "        if not type(self) == type(other):\n",
+    "            raise ValueError(f'Only Point instances allowed: {type(other)}')\n",
+    "        return math.sqrt((self.x - other.x)**2 + (self.y - other.y)**2 + (self.z - other.z)**2)\n",
+    "\n",
+    "p3 = Point(4, 6)\n",
+    "print(p3)\n",
+    "p4 = Point(3, 2, 7)\n",
+    "p5 = p3 + p4\n",
+    "print(p5)\n"
    ]
   },
   {
@@ -402,7 +608,19 @@
     }
    },
    "source": [
-    "## A more realistic example"
+    "## A more complex example (optional)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5579af2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "This worked example demonstrates the use of multiple ineteracting and interdependent custom types. Also, more hooks are demonstrated, notably the `__iter__()`, `__repr__()` and `__next__()` hooks."
    ]
   },
   {
@@ -506,19 +724,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "005c6f40",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### The constructor: `__init__()`\n",
-    "As seen before, the keyword `class` is used to communicate there is a class definition - an object blueprint. The `__init__()` method is called the **_constructor_** method because it is used to _construct_ an object: an instance of the class. A constructor can receive arguments that are required to have a cvorrect, functional instance of the class."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ef1efa2d",
    "metadata": {
     "slideshow": {
@@ -526,50 +731,9 @@
     }
    },
    "source": [
-    "You never call the `__init__()` method directly! \n",
-    "The `Customer(...)` expression is where a new Customer instance is created. The `__init__()` method is invoked by the Python interpreter and the `self` reference is injected and a reference to the object in memory is returned (and bound to `cust1`.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "49b692e6",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### The injected `self` argument\n",
+    "You never call the `__init__()` method directly!  \n",
     "\n",
-    "There is something special going on in there: the `self` method argument. In OO-Python, all methods invoked on an instance will receive as first argument -inserted by the Python interpreter- a reference to the **current executing object** and convention states that you name it `self`.  \n",
-    "\n",
-    "Because you have a reference to the current executing object you can attach, access and modify its data using this reference."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d77c8b5b",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Object and interpreter hooks\n",
-    "The `__init__()` method is one of the many object and interpreter hooks that exist in Python. They are called \"dunder\" methods because of the \"double underscores\". When you implement these, *they let you interact with operators and built-in functions*. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "56b90658",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "The `__init__()` hook makes it possible to hook into the `()` construction process by defining an argument list. In the listing in a previous paragraph some hoks are specified in class `object`. We will see a few more hooks later in this chapter.  \n",
-    "See for instance [here](https://towardsdatascience.com/a-guide-to-pythons-dunder-methods-3b8104fce335) for more details.\n"
+    "The `Customer(...)` expression is where a new Customer instance is created. The `__init__()` method is invoked by the Python interpreter and the `self` reference is injected and a reference to the object in memory is returned (and bound to `cust1`).  "
    ]
   },
   {
@@ -1258,7 +1422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
