--- a/ITANN_course_description.ipynb
+++ b/ITANN_course_description.ipynb
@@ -52,44 +52,84 @@
    "id": "651d340a",
    "metadata": {},
    "source": [
-    "## Program\n",
-    "\n",
+    "## Program\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6825051e",
+   "metadata": {},
+   "source": [
     "### Day 1\n",
     "\n",
     "* Morning  \n",
-    "    * Course intro\n",
+    "    * Course intro: Python, (Ana)conda, suggested toolbox\n",
     "    * Wishes and expectations\n",
-    "    * (Anaconda)\n",
-    "    * Jupyter\n",
+    "    * Jupyter & Markdown\n",
+    "        * Practice: write an small blog on your favorite topic\n",
+    "    * Demo application\n",
     "    * Python as calculator: scalars and operators\n",
+    "        * Practice: 12.2.1 & 12.2.2.\n",
+    "    * Operator precedence\n",
+    "        * Practice: 12.2.3 & 12.2.4.\n",
     "* Afternoon  \n",
     "    * Datatypes\n",
+    "        * Practice: 12.3.1\n",
+    "    * Slicing \n",
+    "        * Practice: 12.3.3 & 12.3.4 & 12.3.5.\n",
     "    * Flow control\n",
-    "    * Markdown\n",
-    "    * Functions\n",
-    "    * Comments: how and when\n",
-    "\n",
+    "        * Practice: 12.4.1. & 12.4.3.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a508de94",
+   "metadata": {},
+   "source": [
     "### Day 2\n",
     "\n",
     "* Morning  \n",
+    "    * Review of previous topics\n",
+    "    * Functions\n",
+    "        * Practice: 12.5.2.\n",
+    "    * Comments: how and when\n",
+    "        * Practice: Comment 12.5.2.\n",
     "    * File I/O\n",
+    "        * Practice: 12.6.1.\n",
     "    * Script schrijven\n",
-    "    * Bugs and errors: syntax, runtime, semantic errors\n",
-    "    * Learn how to program (hangman, sudoku, zeeslagje tegen de computer)\n",
+    "        * Practice: Put 12.6.1 in a script with file as CL input & error checking\n",
     "* Afternoon\n",
     "    * Standard library functions\n",
-    "    * List comprehensions\n",
-    "    * Data analysis challenge (COVID data, CBS odata): bv kMeans clustering\n",
-    "\n",
+    "        * Practice: 12.7.1-3\n",
+    "    * Sorting\n",
+    "        * Practice: 12.7.4.\n",
+    "    * Script design & error handling\n",
+    "        * As a group: 12.5.1. (12.4.4)\n",
+    "    * Learn how to program (hangman, sudoku, zeeslagje tegen de computer)\n",
+    "        * Choose bigger project from 12.12.1-4\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6330dde",
+   "metadata": {},
+   "source": [
     "### Day 3\n",
     "\n",
     "* Morning\n",
-    "    * challenges\n",
-    "    * writing and using mnodules\n",
-    "    * On demand topics\n",
-    "    * [Optional] OOP    \n",
+    "    * Review of previous topics\n",
+    "    * Python standard modules\n",
+    "    * List comprehensions\n",
+    "    * \\[Optional\\] OOP    \n",
+    "    * \\[Optional\\] regular expressions    \n",
+    "    * \\[Optional\\] writing and using mnodules    \n",
+    "\n",
+    "    * discussion of challenges\n",
+    "\n",
     "* Afternoon\n",
-    "    * Evaluatie\n",
+    "    * Lefrtovers\n",
+    "    * Evaluation of module\n",
     "    * Guest lecture\n",
     "\n"
    ]
@@ -111,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
